<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>hl7</groupId>
    <artifactId>Hl7parser</artifactId>
    <version>1.1.0</version>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Create a fat JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>shaded</shadedClassifierName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>hl7Viewer.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Copy shaded JAR to jpackage input folder -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-for-jpackage</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/jpackage-input"/>
                                <copy file="${project.build.directory}/${project.build.finalName}-shaded.jar"
                                      todir="${project.build.directory}/jpackage-input"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Mac build -->
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>package-mac</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--name</argument>
                                        <argument>HL7 Viewer</argument>
                                        <argument>--input</argument>
                                        <argument>${project.build.directory}/jpackage-input</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.build.finalName}-shaded.jar</argument>
                                        <argument>--icon</argument>
                                        <argument>src/main/resources/icons/mac/icon.icns</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                        <argument>--type</argument>
                                        <argument>dmg</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Windows build -->
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>package-win</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--name</argument>
                                        <argument>HL7 Viewer</argument>
                                        <argument>--input</argument>
                                        <argument>${project.build.directory}/jpackage-input</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.build.finalName}-shaded.jar</argument>
                                        <argument>--main-class</argument>
                                        <argument>hl7Viewer.Main</argument>
                                        <argument>--icon</argument>
                                        <argument>src/main/resources/icons/windows/icon.ico</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                        <argument>--type</argument>
                                        <argument>msi</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}</argument>
                                        <argument>--win-menu</argument>
                                        <argument>--win-shortcut</argument>
                                        <argument>--win-dir-chooser</argument>
                                        <argument>--install-dir</argument>
                                        <argument>HL7 Viewer</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>